# velopack.fusion

./: .gitignore  Future.fu  Json.fu  LICENSE  Platform.fu  Process.fu  Progress.fu  README.md  StringStream.fu  UpdateInfo.fu  UpdateManager.fu  Util.fu  VelopackApp.fu  VelopackAsset.fu  build.bat  build.cs  build.csproj  json.bat  json.cs
.github/workflows/: build.yml
fixtures/: ext-invalid-0001.json  invalid-0006.json  valid-0015.json
for-cpp/: README.md  Velopack.cpp  Velopack.hpp
for-cpp/samples/win32/: VeloCppWinSample.cpp  VeloCppWinSample.vcxproj  dev-build.bat
for-cpp/test/win32/: VeloCppWinSample.vcxproj.filters
for-cs/: README.md  Velopack.cs
for-cs/samples/AvaloniaCrossPlat/: AvaloniaCrossPlat.csproj  MainWindow.axaml.cs  Program.cs
for-cs/samples/AvaloniaCrossPlat/dev-scripts/: build-win.bat
for-cs/test/: CsTests.csproj  CsTests.sln  Fixtures.cs  JsonTests.cs  Velopack.cs
for-cs/test/CsTests/: CsTests.csproj  JsonTests.cs
for-js/: .npmignore  README.md  Velopack.d.ts  Velopack.js  Velopack.ts  package-lock.json  package.json
for-js/samples/electron-forge/: build-win.bat  dev-build.bat  forge.config.js  package-lock.json  package.json
for-js/samples/electron-forge/src/: index.html  index.js  renderer.js  updates.js
for-js/test/electron-forge/: forge.config.js  package-lock.json  package.json
for-js/test/electron-quick-start/: index.html  preload.js  updates.js
for-rust/: Cargo.toml  README.md
for-rust/samples/iced-todos/: Cargo.toml  README.md
for-rust/samples/iced/src/: main.rs
for-rust/src/: app.rs  bundle.rs  download.rs  lib.rs  locator.rs  manager.rs  manifest.rs  util.rs  vfusion.rs
include/: disclaimer.txt  process.cs  ts_begin.ts  velopack.cpp  velopack.cs  velopack.hpp  velopack.ts
src/: Json.fu  Platform.fu  UpdateInfo.fu  UpdateManager.fu  VelopackApp.fu
src/fixtures/: invalid-0011.json
src/include/: ts_begin.ts  ts_end.ts  velopack.cpp  velopack.cs  velopack.hpp
test/: cs.bat
test/msvc/: VeloCppWinSample.cpp  VeloCppWinSample.vcxproj
