[package]
name = "velopack"
version = "0.0.2"
edition = "2021"
license = "MIT"
authors = ["Caelan <git@caesay.com>"]
description = "Quick and easy installer and automatic updates for cross-platform applications"
readme = "readme.md"
homepage = "https://velopack.io"
repository = "https://github.com/velopack/velopack.fusion"
exclude = ["/samples"]
keywords = ["update", "install", "velopack", "squirrel", "automatic-updates"]
categories = ["development-tools"]

[features]
cli = ["clap", "simplelog", "file-rotate"]

[lib]
name = "velopack"
path = "src/lib.rs"

[[bin]]
name = "vfusion"
path = "src/vfusion.rs"
required-features = ["cli"]

[profile.release]
opt-level = "z"          # optimize for size
lto = true               # link-time optimization
debug = false            # disable debug info
debug-assertions = false # disable debug assertions
overflow-checks = false  # disable overflow checks
incremental = false      # disable incremental compilation
codegen-units = 1        # compile all code into a single unit
rpath = false            # disable rpath

[dependencies]
anyhow = "1.0"
log = "0.4"
regex = "1.10"
native-tls = "0.2"
ureq = { version = "2.9", default-features = false, features = [
    "native-tls",
    "gzip",
] }
url = "2.5"
zstd = "0.13"
semver = "1.0"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
xml = "0.8"
normpath = "1.0.1"
lazy_static = "1.4"
derivative = "2.2"
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

# cli packages
clap = { version = "4.4", optional = true }
simplelog = { version = "0.12", optional = true }
file-rotate = { version = "0.7", optional = true }
