[package]
name = "velopack"
version = "0.0.0-local"
edition = "2021"
license = "MIT"
authors = ["Caelan Sayler <git@caesay.com>"]
description = "Installer and automatic updates for cross-platform desktop applications"
readme = "readme.md"
exclude = ["/samples"]
homepage = "https://velopack.io"
repository = "https://github.com/velopack/velopack.fusion"
keywords = ["update", "install", "velopack", "squirrel", "automatic-updates"]
categories = ["development-tools"]

[features]
cli = ["clap", "simplelog", "file-rotate"]
delta = ["zstd", "zip"]
async = ["async-std"]

[lib]
name = "velopack"
path = "src/lib.rs"

[[bin]]
name = "vfusion"
path = "src/vfusion.rs"
required-features = ["cli"]

[profile.release]
opt-level = "z"          # optimize for size
lto = true               # link-time optimization
debug = false            # disable debug info
debug-assertions = false # disable debug assertions
overflow-checks = false  # disable overflow checks
incremental = false      # disable incremental compilation
codegen-units = 1        # compile all code into a single unit
rpath = false            # disable rpath

[dependencies]
anyhow = "1.0"
log = "0.4"
native-tls = "0.2"
ureq = { version = "2.9", default-features = false, features = [
    "native-tls",
    "gzip",
] }
url = "2.5"
semver = "1.0"
xml = "0.8"
derivative = "2.2"
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

# delta packages
zstd = { version = "0.13", optional = true }
zip = { version = "0.6", default-features = false, features = ["deflate"], optional = true }

# cli packages
clap = { version = "4.4", optional = true }
simplelog = { version = "0.12", optional = true }
file-rotate = { version = "0.7", optional = true }

# async
async-std = { version = "1.5", optional = true }
